@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.13 2018/07/28 14:40:49 brook Exp $
-#
+# $NetBSD: Makefile,v 1.14 2019/07/31 19:51:24 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/lmm/
-COMMENT=	Improved procedures for linear mixed models with R
+COMMENT=	Linear mixed models
 # LICENSE=	file LICENSE
 
 R_PKGNAME=	lmm
-R_PKGVER=	1.0
+R_PKGVER=	1.2
 
 USE_LANGUAGES+=	c fortran
 
