@@ -1,7 +1,6 @@
-$NetBSD: distinfo,v 1.7 2015/11/03 23:33:29 agc Exp $
+$NetBSD: distinfo,v 1.8 2019/07/31 19:51:24 brook Exp $
 
-SHA1 (R/lmm_1.0.tar.gz) = bb11076bea46b26395bf34188b45ac66b88fd85b
-RMD160 (R/lmm_1.0.tar.gz) = 9bb93d91af2403ec3e71a2cd15bf99a8f2ec3ff6
-SHA512 (R/lmm_1.0.tar.gz) = f94865125a694fb3f970379479bb0f9918150bd4ae1f9832935d03952867aa0febe168aee6e93ee9ae7d9a6102d8cde84b579691f4e3acc0ed3dc1ac6ab152b7
-Size (R/lmm_1.0.tar.gz) = 454069 bytes
-SHA1 (patch-aa) = 85195d02f6be923e38aa5536f48f19b91d47269c
+SHA1 (R/lmm_1.2.tar.gz) = fc46191a9f1226f63bfb272af793a006a2a5c60c
+RMD160 (R/lmm_1.2.tar.gz) = b0bca18a409b68036b1409a7954f04104b5d417f
+SHA512 (R/lmm_1.2.tar.gz) = 72444cc69cd755b7ef96001f4e651d8cd0ee6d0532bc46d9a818c3b0823649c2a5842579c17acdc5b9060da8b993cce9f16b719155346693b99d9c9b9a65f675
+Size (R/lmm_1.2.tar.gz) = 491954 bytes
